--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,24 +16,33 @@ jobs:
       - name: Install sshpass
         run: sudo apt-get update && sudo apt-get install -y sshpass
 
-      - name: Check if composer files changed
-        id: check_composer
+      - name: Check if composer install is required
+        id: composer_check
         run: |
+          echo "Checking composer.json and composer.lock changes..."
           git fetch origin main
           CHANGED=$(git diff --name-only HEAD~1 HEAD | grep -E 'composer\.json|composer\.lock' || true)
-          echo "changed_files=$CHANGED" >> $GITHUB_OUTPUT
+
+          if [ -n "$CHANGED" ]; then
+            echo "SHOULD_COMPOSER_INSTALL=true" >> $GITHUB_ENV
+          elif [ "${{ secrets.FORCE_COMPOSER }}" = "true" ]; then
+            echo "Manual override: composer install will run."
+            echo "SHOULD_COMPOSER_INSTALL=true" >> $GITHUB_ENV
+          else
+            echo "No need to run composer install."
+            echo "SHOULD_COMPOSER_INSTALL=false" >> $GITHUB_ENV
+          fi
 
       - name: Run composer install on Hostinger (if needed)
-        if: steps.check_composer.outputs.changed_files != ''
+        if: env.SHOULD_COMPOSER_INSTALL == 'true'
         env:
           SSHPASS: ${{ secrets.HOSTINGER_PASS }}
         run: |
-          echo "Composer files changed. Running composer install on server..."
           sshpass -e ssh -o StrictHostKeyChecking=no -p ${{ secrets.HOSTINGER_PORT }} \
             ${{ secrets.HOSTINGER_USER }}@${{ secrets.HOSTINGER_HOST }} \
             "cd ${{ secrets.HOSTINGER_PATH }} && composer install --no-dev --optimize-autoloader"
 
-      - name: Deploy via rsync over SSH
+      - name: Deploy code to Hostinger via rsync
         env:
           SSHPASS: ${{ secrets.HOSTINGER_PASS }}
         run: |
