--- a/.env
+++ b/.env
@@ -10,12 +10,26 @@ APP_SYNC="false"
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
+# ---------------------------
+# Local Development Settings
+# ---------------------------
+# DB_CONNECTION=mysql
+# DB_HOST=localhost
+# DB_PORT=3306
+# DB_DATABASE=allkraft2
+# DB_USERNAME=root
+# DB_PASSWORD=
+
+# ---------------------------
+# Production (Hostinger) Settings
+# ---------------------------
 DB_CONNECTION=mysql
-DB_HOST="localhost"
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE="allkraft2"
-DB_USERNAME="root"
-DB_PASSWORD=""
+DB_DATABASE=u824676608_allkraft2
+DB_USERNAME=u824676608_ssh
+DB_PASSWORD=Siddhrans@123
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
